--- a/index.html
+++ b/index.html
@@ -17,52 +17,40 @@
       color: #333;
     }
 
-.header-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 40px;
-  background-color: white;
-  flex-wrap: wrap;
-}
+    .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background-color: white;
+      flex-wrap: wrap;
+    }
 
-.logo h1 {
-  margin: 0;
-  font-size: 2em;
-  color: #009688;
-}
+    .logo h1 {
+      margin: 0;
+      font-size: 2em;
+      color: #009688;
+    }
 
-.logo p {
-  font-size: 1em;
-  color: #666;
-  margin-top: 4px;
-}
+    .logo p {
+      font-size: 1em;
+      color: #666;
+      margin-top: 4px;
+    }
 
-.navbar {
-  display: flex;
-  flex-direction: row; /* tetap horizontal */
-  gap: 12px;
-  flex-wrap: nowrap;
-}
+    .navbar a {
+      text-decoration: none;
+      background-color: #009688;
+      color: #fff;
+      padding: 10px 18px;
+      margin-left: 10px;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
 
-.navbar a {
-  text-decoration: none;
-  background-color: #009688;
-  color: #fff;
-  padding: 10px 18px;
-  margin-left: 10px;
-  border-radius: 6px;
-  font-weight: bold;
-  transition: background-color 0.3s ease;
-}
-
-.navbar a:hover {
-  background-color: #00796b;
-}
-    h2 {
-      color: #2c3e50;
-      border-bottom: 2px solid #ddd;
-      margin-bottom: 15px;
+    .navbar a:hover {
+      background-color: #00796b;
     }
 
     section {
@@ -180,6 +168,17 @@
   .navbar a {
     font-size: 1.2em;
     white-space: nowrap; /* biar teksnya nggak turun */
+
+          footer {
+        padding: 20px;
+        margin: 10px auto;
+        background-color: #009688;
+        text-align: center;
+        font-size: 0.9em;
+        color: #ffffff;
+        border-top: 1px solid #eee;
+      }
+
   }
 }
   </style>
