--- a/kontak.html
+++ b/kontak.html
@@ -10,28 +10,28 @@
       padding: 0;
     }
 
-  .header-bar {
+    .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
       background-color: white;
       flex-wrap: wrap;
-  }
+    }
 
-  .logo h1 {
+    .logo h1 {
       margin: 0;
       font-size: 2em;
       color: #009688;
-  }
+    }
 
-  .logo p {
+    .logo p {
       font-size: 1em;
       color: #666;
       margin-top: 4px;
-  }
+    }
 
-  .navbar a {
+    .navbar a {
       text-decoration: none;
       background-color: #009688;
       color: #fff;
@@ -40,27 +40,12 @@
       border-radius: 6px;
       font-weight: bold;
       transition: background-color 0.3s ease;
-  }
+    }
 
-  .navbar a:hover {
+    .navbar a:hover {
       background-color: #00796b;
-  }
-
-  @media (max-width: 700px) {
-    .header-bar {
-      flex-direction: column;
-      align-items: flex-start;
     }
 
-    .navbar {
-      margin-top: 15px;
-    }
-
-    .navbar a {
-      display: inline-block;
-      margin: 5px 5px 0 0;
-    }
-  }
     main {
       padding: 20px;
       margin: 10px auto;
@@ -71,7 +56,7 @@
       color: #333;
     }
 
-    section{
+    section {
       padding: 30px;
       margin: 10px auto;
       background-color: #fff;
@@ -169,6 +154,94 @@
       border-top: 1px solid #eee;
     }
 
+    /* Responsive for mobile */
+    @media (max-width: 700px) {
+      .header-bar {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 15px 20px;
+      }
+
+      .navbar {
+        margin-top: 15px;
+        width: 100%;
+      }
+
+      .navbar a {
+        display: inline-block;
+        margin: 5px 5px 0 0;
+        padding: 10px 14px;
+        font-size: 0.9em;
+      }
+
+      main {
+        padding: 15px;
+        margin: 10px;
+        max-width: 100%;
+      }
+
+      section {
+        padding: 20px 15px;
+        margin: 10px;
+      }
+
+      input[type="text"],
+      input[type="email"],
+      textarea {
+        max-width: 100%;
+        font-size: 1em;
+      }
+
+      input[type="submit"] {
+        width: 100%;
+        max-width: none;
+        font-size: 1em;
+      }
+
+      table, thead, tbody, th, td, tr {
+        display: block;
+        width: 100%;
+      }
+
+      table {
+        border: none;
+      }
+
+      thead tr {
+        display: none;
+      }
+
+      tr {
+        margin-bottom: 15px;
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        padding: 10px;
+        box-sizing: border-box;
+      }
+
+      td {
+        border: none;
+        padding-left: 50%;
+        position: relative;
+        text-align: left;
+      }
+
+      td::before {
+        position: absolute;
+        top: 10px;
+        left: 15px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+        font-weight: bold;
+        content: attr(data-label);
+      }
+
+      footer {
+        font-size: 0.8em;
+        padding: 15px 10px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -204,54 +277,54 @@
     <input type="submit" value="Kirim">
   </form>
 </main>
-  <section>
-    <h2>Informasi Kontak</h2>
-    <address>
-      UMKM Rasa Lokal<br>
-      Jl. Merdeka No. 45, Jakarta<br>
-      Telepon: (021) 123-4567<br>
-      Email: <a href="mailto:info@umkmrasalokal.com">info@umkmrasalokal.com</a>
-    </address>
-  </section>
+<section>
+  <h2>Informasi Kontak</h2>
+  <address>
+    UMKM Rasa Lokal<br>
+    Jl. Merdeka No. 45, Jakarta<br>
+    Telepon: (021) 123-4567<br>
+    Email: <a href="mailto:info@umkmrasalokal.com">info@umkmrasalokal.com</a>
+  </address>
+</section>
 
-  <section>
-    <h2>Daftar Cabang</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Lokasi</th>
-          <th>Alamat</th>
-          <th>Telepon</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Jakarta</td>
-          <td>Jl. Merdeka No. 45</td>
-          <td>(021) 123-4567</td>
-        </tr>
-        <tr>
-          <td>Bandung</td>
-          <td>Jl. Asia Afrika No. 20</td>
-          <td>(022) 987-6543</td>
-        </tr>
-        <tr>
-          <td>Surabaya</td>
-          <td>Jl. Pahlawan No. 10</td>
-          <td>(031) 555-1234</td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
+<section>
+  <h2>Daftar Cabang</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Lokasi</th>
+        <th>Alamat</th>
+        <th>Telepon</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td data-label="Lokasi">Jakarta</td>
+        <td data-label="Alamat">Jl. Merdeka No. 45</td>
+        <td data-label="Telepon">(021) 123-4567</td>
+      </tr>
+      <tr>
+        <td data-label="Lokasi">Bandung</td>
+        <td data-label="Alamat">Jl. Asia Afrika No. 20</td>
+        <td data-label="Telepon">(022) 987-6543</td>
+      </tr>
+      <tr>
+        <td data-label="Lokasi">Surabaya</td>
+        <td data-label="Alamat">Jl. Pahlawan No. 10</td>
+        <td data-label="Telepon">(031) 555-1234</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
 
-  <section>
-    <h2>Media Sosial</h2>
-    <div class="social-links">
-      <a href="https://www.facebook.com/umkmrasalokal" target="_blank" rel="noopener noreferrer">Facebook</a>
-      <a href="https://twitter.com/umkmrasalokal" target="_blank" rel="noopener noreferrer">Twitter</a>
-      <a href="https://instagram.com/umkmrasalokal" target="_blank" rel="noopener noreferrer">Instagram</a>
-    </div>
-  </section>
+<section>
+  <h2>Media Sosial</h2>
+  <div class="social-links">
+    <a href="https://www.facebook.com/umkmrasalokal" target="_blank" rel="noopener noreferrer">Facebook</a>
+    <a href="https://twitter.com/umkmrasalokal" target="_blank" rel="noopener noreferrer">Twitter</a>
+    <a href="https://instagram.com/umkmrasalokal" target="_blank" rel="noopener noreferrer">Instagram</a>
+  </div>
+</section>
 
 <footer>
   <p>© 2025 UMKM Rasa Lokal. Seluruh hak cipta dilindungi.</p>
