--- a/kontak.html
+++ b/kontak.html
@@ -156,109 +156,63 @@
     }
 
     /* Responsive for mobile */
-       @media (max-width: 700px) {
-      .header-bar {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 20px 25px;
-      }
+@media (max-width: 700px) {
+  body {
+    font-size: 14px;
+  }
 
-      .logo h1 {
-        font-size: 2.8em; /* diperbesar */
-      }
+  .header-bar {
+    padding: 15px 20px;
+  }
 
-      .logo p {
-        font-size: 1.2em; /* diperbesar */
-      }
+  .logo h1 {
+    font-size: 1.5em;
+  }
 
-      .navbar a {
-        display: inline-block;
-        margin: 7px 7px 0 0;
-        padding: 14px 20px;
-        font-size: 1.1em; /* diperbesar */
-      }
+  .logo p {
+    font-size: 0.9em;
+  }
 
-      main {
-        padding: 25px 20px;
-        margin: 10px;
-        max-width: 100%;
-        font-size: 1.2em; /* font utama diperbesar */
-      }
+  .navbar a {
+    padding: 8px 14px;
+    font-size: 0.9em;
+  }
 
-      section {
-        padding: 25px 20px;
-        margin: 10px;
-      }
-
-      input[type="text"],
-      input[type="email"],
-      textarea {
-        max-width: 100%;
-        font-size: 1.1em; /* input diperbesar */
-        padding: 12px;
-      }
- form label {
-    font-size: 1.3em; /* label form diperbesar */
+  main, section {
+    padding: 15px;
+    margin: 10px;
   }
 
   input[type="text"],
   input[type="email"],
   textarea {
-    font-size: 1.2em; /* input form diperbesar */
-    padding: 14px;
+    font-size: 0.95em;
+    padding: 6px;
   }
 
   input[type="submit"] {
-    font-size: 1.4em; /* tombol submit diperbesar */
-    padding: 18px 0;
+    font-size: 1em;
+    padding: 10px 16px;
   }
 
-  /* Tabel daftar cabang */
-  table, thead, tbody, th, td, tr {
-    display: block;
-    width: 100%;
-  }
-
-  thead tr {
-    display: none;
-  }
-
+  table,
+  thead,
+  tbody,
+  th,
+  td,
   tr {
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-
-  td {
-   font-size: 1.25em;
-    padding-left: 50%; /* dikurangi sedikit dari 55% */
-    padding-right: 15px; /* tambah padding kanan */
-    position: relative;
-    text-align: left;
-    box-sizing: border-box; /
+    font-size: 0.95em;
   }
 
   td::before {
-    position: absolute;
-    top: 20px;
-    left: 15px; /* dikurangi sedikit agar lebih masuk */
-    width: 45%;
-    white-space: nowrap;
-    font-weight: bold;
-    font-size: 1.25em; header pseudo elemen diperbesar */
+    font-size: 0.95em;
   }
 
-  /* Media sosial */
   .social-links a {
-    font-size: 1.3em; /* link media sosial diperbesar */
-    margin-right: 20px;
+    font-size: 0.95em;
   }
+}
 
-      footer {
-        font-size: 0.9em; /* footer diperbesar sedikit */
-        padding: 20px 15px;
       }
     }
   </style>
